[package]
name = "runty8-clib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "runty8_clib"
crate-type = ["staticlib"]

[dependencies]
cty = "0.2.2"
embedded-alloc = "0.5.0"
runty8-core = { path = "../runty8-core", default-features = false }

# [target.'cfg(all(target_arch = "arm", target_os = "none"))'.build-dependencies]
[build-dependencies]
bindgen = { version = "0.64.0", default-features = false }

# [dev-dependencies]
# bindgen = { version = "0.64.0", default-features = false }

# [target.'cfg(all(target_arch = "arm", target_os = "none"))'.package]
