[package]
name = "runty8-core"
version = "0.1.0"
edition = "2021"

# https://users.rust-lang.org/t/best-practice-of-extending-a-no-std-crate/12281/4
[features]
default = ["std"]
# std = ["itertools", "paste"]
std = []
no_std = []

[dependencies]
# display_utils = { version="0.4.0", optional = true }
display_utils = { version="0.4.0" }
itertools = { version = "*", default-features = false }
math = { git = "https://github.com/nagisa/math.rs" }
# include_dir = "0.7.3"
# paste = { version = "1.0.9", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "*", features = ["js"] }
