[package]
name = "runty8-core"
version = "0.1.0"
edition = "2021"

# https://users.rust-lang.org/t/best-practice-of-extending-a-no-std-crate/12281/4
[features]
default = ["std"]
# std = ["itertools", "paste"]
std = ["rand/default", "include_dir"]
no_std = []

[dependencies]
# display_utils = { version="0.4.0", optional = true }
display_utils = { version="0.4.0" }
itertools = { version = "*", default-features = false }
math = { git = "https://github.com/nagisa/math.rs" }
rand = { version = "0.8.5", default-features = false }
include_dir = { version = "0.7.3", optional = true }
paste = { version = "1.0.9" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "*", features = ["js"] }
