[package]
name = "runty8"
version = "0.1.0"
edition = "2021"

[dependencies]
runty8-core = { path = "../runty8-core" }
runty8-runtime = { path = "../runty8-runtime" }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.6"
libc = "0.2.139"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
runty8-editor = { path = "../runty8-editor" }
